--- a/Organ.AI/Base.lproj/Main.storyboard
+++ b/Organ.AI/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l1i-wd-kYJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rK4-Tj-ND2">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
@@ -49,6 +49,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="zE2-V1-jFs"/>
                     </view>
+                    <navigationItem key="navigationItem" id="yAF-Ag-S18"/>
                     <connections>
                         <segue destination="h4j-j6-ViB" kind="show" identifier="segueToHome" id="U4x-gD-0yB"/>
                     </connections>
@@ -56,6 +57,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JUU-Eh-WPW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="828.98550724637687" y="130.58035714285714"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cul-5V-EEt">
+            <objects>
+                <navigationController id="rK4-Tj-ND2" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="AGI-0f-ddZ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="l1i-wd-kYJ" kind="relationship" relationship="rootViewController" id="b4f-FK-zaf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aq7-kd-RY6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-245" y="844"/>
         </scene>
         <!--FSCalendarScopeExample-->
         <scene sceneID="fC0-fg-4Nx">
@@ -66,11 +83,11 @@
                         <viewControllerLayoutGuide type="bottom" id="r7U-78-xix"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="e41-B6-Lza">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jIt-R0-JGI">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
                                 <items>
                                     <navigationItem title="Organai" id="VUt-hA-yLd">
                                         <barButtonItem key="leftBarButtonItem" title="Month" id="wSh-Fi-rsN">
@@ -87,7 +104,7 @@
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="GRl-P9-31F">
-                                <rect key="frame" x="0.0" y="372" width="414" height="436"/>
+                                <rect key="frame" x="0.0" y="448" width="414" height="414"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="Wrz-wz-ctl" userLabel="Footer">
                                     <rect key="frame" x="0.0" y="307.5" width="414" height="69"/>
@@ -357,7 +374,7 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NQg-xA-aly" customClass="FSCalendar">
-                                <rect key="frame" x="0.0" y="56" width="414" height="300"/>
+                                <rect key="frame" x="0.0" y="132" width="414" height="300"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="NHG-fs-amc"/>
@@ -395,14 +412,24 @@
                                     <outlet property="delegate" destination="h4j-j6-ViB" id="LYR-QE-mCE"/>
                                 </connections>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qAT-Kc-XlL">
+                                <rect key="frame" x="180.5" y="829" width="53" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addNewEvent:" destination="h4j-j6-ViB" eventType="touchUpInside" id="j8u-yb-dei"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="NQg-xA-aly" firstAttribute="leading" secondItem="e41-B6-Lza" secondAttribute="leading" id="0rt-ea-0Il"/>
                             <constraint firstItem="r7U-78-xix" firstAttribute="top" secondItem="GRl-P9-31F" secondAttribute="bottom" id="AyY-k8-rkw"/>
                             <constraint firstItem="GRl-P9-31F" firstAttribute="trailing" secondItem="NQg-xA-aly" secondAttribute="trailing" id="DfD-0m-vcj"/>
+                            <constraint firstItem="qAT-Kc-XlL" firstAttribute="centerX" secondItem="SLg-hM-oA4" secondAttribute="centerX" id="GLt-J7-JJF"/>
                             <constraint firstAttribute="trailing" secondItem="NQg-xA-aly" secondAttribute="trailing" id="QC0-wn-aIn"/>
                             <constraint firstItem="NQg-xA-aly" firstAttribute="top" secondItem="jIt-R0-JGI" secondAttribute="bottom" id="aVt-kK-L6k"/>
+                            <constraint firstItem="qAT-Kc-XlL" firstAttribute="bottom" secondItem="SLg-hM-oA4" secondAttribute="bottom" constant="15" id="anw-4X-EZY"/>
                             <constraint firstItem="SLg-hM-oA4" firstAttribute="trailing" secondItem="jIt-R0-JGI" secondAttribute="trailing" id="cg1-6S-o1J"/>
                             <constraint firstItem="jIt-R0-JGI" firstAttribute="top" secondItem="SLg-hM-oA4" secondAttribute="top" id="hDe-Yw-YkC"/>
                             <constraint firstItem="GRl-P9-31F" firstAttribute="top" secondItem="NQg-xA-aly" secondAttribute="bottom" constant="16" id="kmA-Af-pni"/>
@@ -423,11 +450,34 @@
                         <outlet property="calendarHeightConstraint" destination="NHG-fs-amc" id="raX-q3-01P"/>
                         <outlet property="tableView" destination="GRl-P9-31F" id="gER-ya-xCo"/>
                         <outlet property="weekMonthToggleOutlet" destination="wSh-Fi-rsN" id="xgC-JF-ByQ"/>
+                        <segue destination="qUp-Z2-zx6" kind="show" identifier="segue" id="c55-HR-rh1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zCI-Pv-WNQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1606" y="134"/>
+        </scene>
+        <!--Add Event View Controller-->
+        <scene sceneID="hC9-zZ-vfP">
+            <objects>
+                <viewController id="qUp-Z2-zx6" customClass="AddEventViewController" customModule="Organ_AI" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2d8-bo-0fy">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="JhZ-pg-Cn8"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="KqT-OR-Xxt">
+                        <barButtonItem key="rightBarButtonItem" title="Create" id="EL4-2Y-2cw">
+                            <connections>
+                                <action selector="createEventTapped:" destination="qUp-Z2-zx6" id="bkA-Ro-RIv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1uq-ms-TSf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2542" y="136"/>
         </scene>
     </scenes>
 </document>
